--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">SourceCodeAnalysisRecyclerView</string>
-    <string name="action_VerticalLinearLayout">VerticalLinearLayout</string>
-    <string name="action_HorizontalLinearLayout">HorizontalLinearLayout</string>
-    <string name="action_VerticalGridLayout">VerticalGridLayout</string>
-    <string name="action_HorizontalGridLayout">HorizontalGridLayout</string>
-    <string name="action_VerticalStaggeredGridLayout">VerticalStaggeredGridLayout</string>
-    <string name="action_HorizontalStaggeredGridLayout">HorizontalStaggeredGridLayout</string>
+    <string name="action_VerticalLinearLayout">Vertical_Linear</string>
+    <string name="action_HorizontalLinearLayout">Horizontal_Linear</string>
+    <string name="action_VerticalGridLayout">Vertical_Grid</string>
+    <string name="action_HorizontalGridLayout">Horizontal_Grid</string>
+    <string name="action_VerticalStaggeredGridLayout">Vertical_StaggeredGrid</string>
+    <string name="action_HorizontalStaggeredGridLayout">Horizontal_StaggeredGrid</string>
 </resources>
